[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/enemy-2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/enemy-1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy-1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 19 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 10 )

[node name="Enemy-2" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.27374e-13, 1 )
scale = Vector2( 0.691781, 0.691781 )
frames = SubResource( 2 )
playing = true

[node name="Right_Collision" type="RayCast2D" parent="."]
position = Vector2( 22, 3 )
rotation = 1.57118
enabled = true
cast_to = Vector2( -0.981201, 49.0004 )
collide_with_areas = true

[node name="Left_Floor_Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Floor_Collision"]
position = Vector2( -7, 39 )
shape = SubResource( 4 )

[connection signal="body_exited" from="Left_Floor_Collision" to="." method="_on_Left_Floor_Collision_body_exited"]
